01/29/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.5.1.4 'Calder':
	- Configuration alert (warning) messages.
	- Relay addresses by default use listener addresses.
	
01/27/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.5.1.3 'Calder':
	- 'External' IP implemented for TURN-server-behind-NAT situation.

01/26/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.5.1.2 'Calder':
	- Alternative ports moved to 20000-ish territory.
	- Docs fixes.
	
01/22/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.5.1.1 'Calder':
	- Docs fixes.
	
01/22/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.5.1.0 'Calder':
	- C++ compatible headers and build.
	- C++ library header. 
	- HTML-formatted development reference.
	
01/14/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.5.0.0 'Calder':
	- RFC 5769 check utility implemented.
	- RFC 5780 STUN extension implemented. 
	
01/13/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.4.2.5 'Scale':
	- Issue 2 fixed.
	
01/08/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.4.2.4 'Scale':
	- Bogus "Bind to device" error message removed (Linux).
	- Docs improvements.
	
01/08/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.4.2.3 'Scale':
	- Bandwidth limitation implemented (--max-bps option).
	- DTLS communications improved.
	
01/07/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.4.2.2 'Scale':
	- Output messages fixed.
	- Peer test application accepts multiple listening addresses.
	- config search directories improved.
	
01/06/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.4.2.1 'Scale':
	- Examples directory structure fixed
	- Installation fixes
	- Output messages fixed
	
01/05/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.4.2 'Scale':
	- Daemon execution improved
	- Installation fixes
	- Added comments to the scripts
	
01/04/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.4.1.2 'Scale':
	- Configure script introduced
	- Installation fixes
	- Run as daemon
	