@@ -2,6 +2,8 @@
 Version 1.5.1.4 'Calder':
 	- Configuration alert (warning) messages.
 	- Relay addresses by default use listener addresses.
+	- Realm/user sequence fixed in the config file reading.
+	
 	
 01/27/2013 Oleg Moskalenko <mom040267@gmail.com>
 Version 1.5.1.3 'Calder':
